Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjTextField.quorum
class Main
    Text v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Text
        text var = "text"
        return var
    end
end